fix(ui): carousel image being cropped for small width

--- a/openmetadata-ui/src/main/resources/ui/src/pages/LoginPage/login.style.less
+++ b/openmetadata-ui/src/main/resources/ui/src/pages/LoginPage/login.style.less
@@ -204,19 +204,28 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
+
+        .carousal-description {
+          padding-bottom: 2rem;
+        }
       }
 
       .image-container {
         position: relative;
         width: 100%;
+        height: 100%;
         min-height: 420px;
         display: flex;
         justify-content: center;
         align-items: center;
+        flex: 1;
+        overflow: hidden;
       }
 
       .main-image {
-        max-height: 90%;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
         border-radius: 18px;
       }
     }
